testdata/baselines/reference/submodule/compiler/contravariantOnlyInferenceWithAnnotatedOptionalParameterJs.errors.txt
index.js(3,20): error TS2304: Cannot find name 'T'.
index.js(4,14): error TS2304: Cannot find name 'T'.


==== index.js (2 errors) ====
    /**
     * @template T
     * @param {(value: T, index: number) => boolean} predicate
                       ~
!!! error TS2304: Cannot find name 'T'.
     * @returns {T}
                 ~
!!! error TS2304: Cannot find name 'T'.
     */
    function filter(predicate) {
      return /** @type {any} */ (null);
    }
    
    const a = filter(
      /**
       * @param {number} [pose]
       */
      (pose) => true
    );
    
    const b = filter(
      /**
       * @param {number} [pose]
       * @param {number} [_]
       */
      (pose, _) => true
    );
    